created page for categories

--- a/women-products.html
+++ b/women-products.html
@@ -67,132 +67,26 @@
          </nav>
       </div>
    </header>
-   <section class="section productDetail">
-      <div class="container">
-         <div class="productDetail_inner">
-            <div class="row">
-               <div class="col-md-6 col-lg-6 px-5">
-                  <div class="prodctDetail_img">
-                     <img src="./images/productDetail1.webp" alt="img">
-                  </div>
-               </div>
-               <div class="col-md-6 col-lg-6">
-                  <div class="prodctDetail_content">
-                     <h3>
-                        Lightweight Jacket
-                        </h4>
-                        <h5>$58.79</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut ipsum repellendus,
-                           ullam saepe nemo ipsa voluptatibus sed</p>
-                        <form>
-                           <div class="my-2">
-                              <label for="Size" class="form-label">Size</label>
-                              <select class="form-select form-select-lg" id="Size" aria-label=".form-select-lg example">
-                                 <option selected disabled>choose an option</option>
-                                 <option value="1">Size S</option>
-                                 <option value="2">Size M</option>
-                                 <option value="3">Size L</option>
-                                 <option value="4">Size XL</option>
-                                 <option value="5">Size XXL</option>
-                              </select>
-                           </div>
-                           <div class="my-2">
-                              <label for="Color" class="form-label">Color</label>
-                              <select class="form-select form-select-lg" id="Color"
-                                 aria-label=".form-select-lg example">
-                                 <option selected disabled>choose an option</option>
-                                 <option value="1">Red</option>
-                                 <option value="2">Green</option>
-                                 <option value="3">Blue</option>
-                                 <option value="4">Grey</option>
-                                 <option value="5">Black</option>
-                              </select>
-                           </div>
-                           <div class="my-2">
-                              <label for="Color" class="form-label">Items</label>
-                              <select class="form-select form-select-lg" id="Color"
-                                 aria-label=".form-select-lg example">
-                                 <option selected disabled>choose an option</option>
-                                 <option value="1">1</option>
-                                 <option value="2">2</option>
-                                 <option value="3">3</option>
-                                 <option value="4">4</option>
-                                 <option value="5">5</option>
-                                 <option value="6">6</option>
-                                 <option value="7">7</option>
-                                 <option value="8">8</option>
-                                 <option value="9">9</option>
-                                 <option value="10">10</option>
-                              </select>
-                           </div>
-                           <div class="my-4 text-center">
-                              <button class="theme_button secondaryBtn">Add to cart
-                              </button>
-                           </div>
-                        </form>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-   <section class="section productInfo">
-      <div class="container">
-         <div class="productInfo_inner">
-            <nav>
-               <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
-                     type="button" role="tab" aria-controls="nav-home" aria-selected="true">Description</button>
-                  <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
-                     type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Additional
-                     information</button>
-               </div>
-            </nav>
-            <div class="tab-content" id="nav-tabContent">
-               <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                  <div class="productInfo_tabData">
-                     <div class="productInfo_description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam qui natus perspiciatis neque
-                           explicabo, optio similique minima iste, at, mollitia beatae impedit illo? Dolores quia,
-                           provident debitis ipsa corporis ullam? Lorem ipsum dolor sit amet consectetur adipisicing
-                           elit. Aliquam qui natus perspiciatis neque
-                           explicabo, optio similique minima iste, at, mollitia beatae impedit illo? Dolores quia,
-                           provident debitis ipsa corporis ullam? Curabitur dignissim, nunc nec laoreet consequat, purus
-                           nunc porta lacus, vel efficitur tellus augue in ipsum. Cras in arcu sed metus rutrum iaculis.
-                           Nulla non tempor erat. Duis in egestas nunc.</p>
-                     </div>
-                  </div>
-               </div>
-               <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                  <div class="productInfo_tabData">
-                     <div class="productInfo_addition">
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
    <section class="section products">
       <div class="container">
          <div class="section_heading">
-            <h2>Related Products</h2>
+            <h2>Women's Products</h2>
          </div>
          <div class="row gx-4 gy-5">
             <div class="col-md-3">
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg1.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Esprit Ruffle Shirt</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -200,16 +94,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg2.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Herschel supply</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -217,16 +111,16 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg3.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Only Check Trouser</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -234,16 +128,220 @@
                <div class="prodctCard">
                   <div class="prodctCard_img">
                      <img src="./images/cardImg4.webp" alt="img">
-                     <a class="viewBtn" href="javascript:void(0)">Quick view</a>
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
                   </div>
                   <div class="cardContent">
                      <div class="cardContent_detail">
-                        <a href="javascript:void(0)">
+                        <a href="product-detail.html">
                            <h5>Classic Trench Coat</h5>
                         </a>
                         <p>$16.64</p>
                      </div>
-                     <a href="javascript:void(0)" class="btn">view</a>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg5.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Front Pocket Jumper</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg6.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Vintage Inspired Classic</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg7.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Shirt in Stretch Cotton</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg8.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg9.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg10.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg11.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg12.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg13.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg14.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg15.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="prodctCard">
+                  <div class="prodctCard_img">
+                     <img src="./images/cardImg16.webp" alt="img">
+                     <a class="viewBtn" href="product-detail.html">Quick view</a>
+                  </div>
+                  <div class="cardContent">
+                     <div class="cardContent_detail">
+                        <a href="product-detail.html">
+                           <h5>Pieces Metallic Printed</h5>
+                        </a>
+                        <p>$16.64</p>
+                     </div>
+                     <a href="product-detail.html" class="btn">view</a>
                   </div>
                </div>
             </div>
@@ -328,7 +426,6 @@
          </div>
       </div>
    </section>
-
    <footer class="footer">
       <div class="container">
          <div class="footer_row">
