--- a/product.html
+++ b/product.html
@@ -40,9 +40,9 @@
                         Shop
                      </a>
                      <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <li><a class="dropdown-item" href="#">Men Products</a></li>
-                        <li><a class="dropdown-item" href="#">Women Products</a></li>
-                        <li><a class="dropdown-item" href="#">Accessories</a></li>
+                        <li><a class="dropdown-item" href="men-products.html">Men Products</a></li>
+                        <li><a class="dropdown-item" href="women-products.html">Women Products</a></li>
+                        <li><a class="dropdown-item" href="accessories.html">Accessories</a></li>
                      </ul>
                   </li>
 
